--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,14 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="20dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="알럿창 테스트"
+                android:textColor="@color/colorBlack"
+                android:textSize="20dp"
+                android:onClick="@{()->viewModel.moveAlert()}"
+                android:layout_height="wrap_content"/>
+
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.constraintlayout.widget.ConstraintLayout>
