2020. 06. 13 주홍민 - 금일 작업 내역 반영 - 공통 클릭 이벤트에 대하여 고민좀 해야겠다..

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,7 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="@{()-> viewModel.test()}"
+                app:turtleClick="@{()-> viewModel.test()}"
                 android:text="테스트"
                 android:textColor="@color/colorWhite"
                 android:textStyle="bold" />
