--- a/app/src/main/res/layout/item_memo_normal.xml
+++ b/app/src/main/res/layout/item_memo_normal.xml
@@ -10,6 +10,10 @@
             type="com.hmju.memo.viewModels.MainViewModel" />
 
         <variable
+            name="listener"
+            type="com.hmju.memo.base.BaseViewHolder.BaseClickListener" />
+
+        <variable
             name="item"
             type="com.hmju.memo.model.memo.MemoItem" />
     </data>
@@ -17,10 +21,8 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_size_10"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="@dimen/size_6"
-        app:cardElevation="@dimen/size_6">
+        style="@style/MemoRootStyle"
+        app:turtleClick="@{()->listener.memoClick(item)}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
