--- a/app/src/main/res/layout/layout_header_type_img_search.xml
+++ b/app/src/main/res/layout/layout_header_type_img_search.xml
@@ -1,16 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.HeaderViewModel" />
+            type="com.hmju.memo.viewModels.MainViewModel" />
+
+        <!--        <variable-->
+        <!--            name="viewModel"-->
+        <!--            type="com.hmju.memo.viewModels.HeaderViewModel" />-->
     </data>
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:fitsSystemWindows="true"
-        android:layout_height="@dimen/size_200">
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_200"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/size_200"
+                android:adjustViewBounds="true"
+                android:background="@color/colorPrimaryLight"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.5"/>
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
+
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
     </com.google.android.material.appbar.AppBarLayout>
