--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -106,6 +106,7 @@
     <dimen name="text_size_20">20dp</dimen>
 
     <dimen name="margin_size_5">5dp</dimen>
+    <dimen name="margin_size_10">10dp</dimen>
     <dimen name="margin_size_20">20dp</dimen>
 
     <dimen name="padding_size_10">10dp</dimen>
