2020. 06. 15 - 금일 작업 내역 반영

--- a/app/src/main/res/layout/item_memo_normal.xml
+++ b/app/src/main/res/layout/item_memo_normal.xml
@@ -15,7 +15,7 @@
 
         <variable
             name="item"
-            type="com.hmju.memo.model.memo.MemoItem" />
+            type="com.hmju.memo.model.memo.MemoNormaItem" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
