--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -10,9 +9,11 @@
             type="com.hmju.memo.viewModels.LoginViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <com.hmju.memo.base.HeaderView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:header_type="none">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -60,18 +61,19 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- 자동 로그인 여부 -->
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="@{viewModel.isAuto}"
-                android:text="@string/auto_login"
-                android:textColor="@color/colorBlack"
-                app:buttonTint="@color/colorPrimary" />
+            <!--            <com.google.android.material.checkbox.MaterialCheckBox-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:checked="@{viewModel.isAuto}"-->
+            <!--                android:text="@string/auto_login"-->
+            <!--                android:textColor="@color/colorBlack"-->
+            <!--                app:buttonTint="@color/colorPrimary" />-->
 
             <!-- 로그인 버튼 -->
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_size_10"
                 android:onClick="@{()->viewModel.startLogin()}"
                 android:paddingTop="@dimen/padding_size_13"
                 android:paddingBottom="@dimen/padding_size_13"
@@ -79,17 +81,8 @@
                 android:textColor="@color/colorWhite"
                 android:textStyle="bold" />
 
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:turtleClick="@{()-> viewModel.test()}"
-                android:text="테스트"
-                android:textColor="@color/colorWhite"
-                android:textStyle="bold" />
-
         </androidx.appcompat.widget.LinearLayoutCompat>
+    </com.hmju.memo.base.HeaderView>
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
