2020. 06. 16 - 개발 금일 작업 내역 반영

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,16 @@
             android:layout_height="match_parent"
             app:header_type="img_search">
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/size_200"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:text="권한 테스트!"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/text_size_14"
+                app:turtleClick="@{()->viewModel.moveTest()}" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
