--- a/app/src/main/res/layout/location_widget.xml
+++ b/app/src/main/res/layout/location_widget.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/color_transparent"
+    android:layout_height="match_parent"
+    android:background="#72FFFFFF"
     android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
@@ -41,5 +41,16 @@
         android:textSize="@dimen/text_size_14"
         tools:text="정확도!!" />
 
-
+    <TextView
+        android:id="@+id/tv_notify"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_size_5"
+        android:background="@color/colorSecondaryLight"
+        android:gravity="center"
+        android:paddingTop="@dimen/padding_size_5"
+        android:paddingBottom="@dimen/padding_size_5"
+        android:text="갱신"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/text_size_20" />
 </LinearLayout>
