--- a/app/src/main/res/xml/location_widget_info.xml
+++ b/app/src/main/res/xml/location_widget_info.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/memo_app_widget"
-    android:initialLayout="@layout/memo_app_widget"
+    android:initialKeyguardLayout="@layout/location_widget"
+    android:initialLayout="@layout/location_widget"
     android:minWidth="250dp"
-    android:minHeight="40dp"
+    android:minHeight="55dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
+    android:resizeMode="vertical"
     android:widgetCategory="home_screen"/>
