2020. 07. 15 주홍민 - 오랜만에 코틀린 커밋...PagedList 사용해보는중.. - 완성 되기 전까지는 github Private 모드로 변경.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:memoList="@{viewModel.pagedList}"
+                app:memoData="@{viewModel.pagedList}"
                 app:viewModel="@{viewModel}" />
 
         </com.hmju.memo.base.HeaderView>
