--- a/app/src/main/res/layout/layout_header_type_img_search.xml
+++ b/app/src/main/res/layout/layout_header_type_img_search.xml
@@ -15,20 +15,22 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_200"
+            android:background="@color/color_transparent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/size_200"
                 android:adjustViewBounds="true"
-                android:background="@color/colorPrimaryLight"
+                android:background="#23FFFFFF"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.5"/>
+                app:layout_collapseParallaxMultiplier="0.5" />
 
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
