--- a/app/src/main/res/layout/item_memo_img.xml
+++ b/app/src/main/res/layout/item_memo_img.xml
@@ -35,7 +35,7 @@
                 android:layout_height="@dimen/size_200"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:bindingImgUrl="@{item.thumbImg()}"
+                app:bindImg="@{item.thumbImg()}"
                 tools:src="@drawable/ic_profile_default" />
 
             <!-- 타이틀 -->
