--- a/app/src/main/res/layout/layout_header_type_img_search.xml
+++ b/app/src/main/res/layout/layout_header_type_img_search.xml
@@ -8,35 +8,36 @@
             name="viewModel"
             type="com.hmju.memo.viewModels.MainViewModel" />
 
-        <!--        <variable-->
-        <!--            name="viewModel"-->
-        <!--            type="com.hmju.memo.viewModels.HeaderViewModel" />-->
     </data>
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+        android:layout_height="@dimen/size_200"
+        android:fitsSystemWindows="true"
+        android:background="#00000000"
+        >
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_200"
-            android:background="@color/color_transparent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:statusBarScrim="#97404A98"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/img_header"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/size_200"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:background="#23FFFFFF"
+                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5" />
 
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin" />
-
+                app:layout_collapseMode="pin"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
