--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,5 +13,33 @@
     </declare-styleable>
     <!-- [e] HeaderView Attrs -->
 
+    <!-- [s] BlurView Attrs -->
+    <declare-styleable name="BlurView">
+        <attr name="blurRadius" format="dimension"/>
+        <attr name="downSampleFactor" format="float"/>
+        <attr name="overlayColor" format="color"/>
+    </declare-styleable>
+    <!-- [e] BlurView Attrs -->
+
+    <!-- [s] BottomToolbar Attrs -->
+    <declare-styleable name="BottomToolbar">
+        <attr name="menu" format="reference" />
+        <attr name="backgroundColor" format="color" />
+        <attr name="indicatorColor" format="color" />
+        <attr name="indicatorRadius" format="dimension" />
+        <attr name="sideMargins" format="dimension" />
+        <attr name="itemPadding" format="dimension" />
+        <attr name="textColor" format="color" />
+        <attr name="itemFontFamily" format="reference" />
+        <attr name="textSize" format="dimension" />
+        <attr name="iconSize" format="dimension" />
+        <attr name="iconMargin" format="dimension" />
+        <attr name="iconTint" format="color"/>
+        <attr name="iconTintActive" format="color"/>
+        <attr name="cornerRadius" format="dimension" />
+        <attr name="activeItem" format="integer" />
+        <attr name="duration" format="integer" />
+    </declare-styleable>
+    <!-- [e] BottomToolbar Attrs -->
 
 </resources>
